# SpaceThing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindIrrlicht.cmake
include/: Entity.hpp  EventReceiver.hpp  Game.hpp  Math.hpp  RenderUtils.hpp  SimpleEntity.hpp  Utils.hpp  World.hpp  config.hpp.in
src/: Game.cpp  RenderUtils.cpp  main.cpp
